# Wine_classification_and_clustering

./: MLP_projekt_koncowy.py  README.md  data_classification.py  data_clusterization.py  main_wine_file.py  poetry  pyproject.toml
refactored code/: data_classification.py  data_clusterization.py  data_visualization_v2.py  main_wine_classifinig_and_clustering.py  main_wine_file.py  utils.py
src/: .data_loader.py.swp  abstract.py  data_classification.py  data_classification_and_estimation.py  data_clusterization.py  data_loader.py  data_preprocessing.py  data_visualization.py  data_visualization_v2.py  explorative_data_analysis.py  main.py  main_wine_file.py  settings.py  utils.py
