[tool.poetry]
name = "wine_dependencies_lib"
version = "0.1.0"
description = ""
authors = ["krzysztoflin"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.0"
seaborn = "^0.11.2"
numpy = "^1.22.3"
sklearn = "^0.0"
flake8 = "^4.0.1"
typing = ""
pandas = "^1.4.2"
matplotlib = "^3.5.1"
mypy = "^0.950"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
